--- a/index.html
+++ b/index.html
@@ -53,3 +53,34 @@
   </footer>
 </body>
 </html>
+
+<!DOCTYPE html><html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Karcher Товары</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; }
+    body { background: #f9f9f9; color: #222; padding: 20px; }
+    header { text-align: center; margin-bottom: 40px; }
+    header h1 { font-size: 2em; color: #000; }
+    .catalog { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; }
+    .item { background: #fff; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); padding: 16px; transition: transform 0.2s; }
+    .item:hover { transform: translateY(-5px); }
+    .item img { width: 100%; border-radius: 8px; margin-bottom: 12px; }
+    .item h3 { font-size: 1.1em; margin-bottom: 8px; }
+    .item p { color: #555; font-size: 0.95em; margin-bottom: 10px; }
+    .price { font-weight: 600; color: #000; margin-bottom: 12px; }
+    .contact { text-align: center; margin-top: 40px; }
+    .contact a { display: inline-block; padding: 12px 24px; background: #ffd100; color: #000; text-decoration: none; border-radius: 8px; font-weight: 600; transition: background 0.3s; }
+    .contact a:hover { background: #e6bc00; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Товары Karcher в наличии</h1>
+  </header>
+  <section class="catalog">
+    <div class="item">
+      <img src="https://via.placeholder.com/300x200?text=Karcher+1" alt="Товар 1" />
